# mailmonkey

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml
.github/workflows/: audit-on-push.yml  general.yml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
