[package]
name = "mailmonkey"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mailmonkey"

[dependencies]
actix-web = "4.0.0-beta.9"
chrono = "0.4.19"
config = "0.11.0"
serde = {version = "1", features = ["derive"]}
uuid = { version = "0.8.2", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.6"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.9"
serde-aux = "2.3.0"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
actix-rt = "2.2.0"
once_cell = "1.8.0"
reqwest = "0.11.4"
tokio = "1.12.0"
